<!--
   Copyright 2018 Google LLC.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
												 xmlns:app="http://schemas.android.com/apk/res-auto"
												 xmlns:tools="http://schemas.android.com/tools"
												 android:layout_width="match_parent"
												 android:layout_height="match_parent"
												 tools:context=".ArActivity">

	<fragment
		android:id="@+id/ux_fragment"
		android:name="com.google.ar.sceneform.ux.ArFragment"
		android:layout_width="match_parent"
		android:layout_height="match_parent"/>

	<ImageButton
		android:id="@+id/ar_settings_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/settings_padding"
		android:background="@null"
		android:contentDescription="@string/settings"
		android:paddingTop="20dp"
		android:src="@drawable/settings"
		app:layout_anchor="@+id/ux_fragment"
		app:layout_anchorGravity="top|right"/>

	<ImageButton
		android:id="@+id/expand_bottom_toolbar_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@null"
		android:contentDescription="@string/expand_bottom_toolbar"
		android:paddingBottom="@dimen/spacing_extra_large"
		android:src="@drawable/chevron_up"
		android:tint="@android:color/white"
		app:layout_anchor="@+id/ux_fragment"
		app:layout_anchorGravity="bottom|center"/>


	<LinearLayout
		android:id="@+id/bottom_toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/light_black"
		android:gravity="center_vertical"
		android:minHeight="?attr/actionBarSize"
		android:orientation="horizontal"
		android:visibility="gone"
		app:layout_anchor="@+id/ux_fragment"
		app:layout_anchorGravity="bottom|center">

		<ImageView
			android:id="@+id/timer_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/settings_padding"
			android:contentDescription="@string/timer_on_off"
			android:src="@drawable/timer_off"/>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:id="@+id/study_status"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/study_status_idle"
				android:textAllCaps="true"/>

			<Chronometer
				android:id="@+id/time_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
		</LinearLayout>

		<View
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="1"/>

		<ImageButton
			android:id="@+id/test_modus"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_weight="0.1"
			android:background="@null"
			android:contentDescription="@string/test_modus_action"
			android:src="@drawable/test_tube_off"/>

		<ImageButton
			android:id="@+id/add_subject_button"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_weight="0.1"
			android:background="@null"
			android:contentDescription="@string/add_subject_button"
			android:src="@drawable/plus"/>

		<ImageButton
			android:id="@+id/cancel"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_weight="0.15"
			android:background="@null"
			android:contentDescription="@string/cancel"
			android:src="@drawable/close_circle"
			android:visibility="gone"/>

		<ImageButton
			android:id="@+id/play_and_pause"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_weight="0.15"
			android:background="@null"
			android:contentDescription="@string/pause"
			android:src="@drawable/pause_circle_outline"
			android:visibility="gone"/>

		<ImageButton
			android:id="@+id/finish"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_weight="0.15"
			android:background="@null"
			android:contentDescription="@string/done"
			android:src="@drawable/check_circle_outline"
			android:visibility="gone"/>

	</LinearLayout>
</android.support.design.widget.CoordinatorLayout>
