<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:background="@color/colorPrimary"
			  android:gravity="center_horizontal"
			  android:orientation="vertical"
			  android:padding="@dimen/surrounding">

	<TextView
		android:id="@+id/title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:fontFamily="sans-serif-medium"
		android:paddingBottom="@dimen/spacing_medium"
		android:text="@string/permissions"
		android:textColor="@android:color/white"
		android:textSize="@dimen/material_typography_h6"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:fontFamily="sans-serif"
		android:text="@string/onboarding_permissions_description"
		android:textColor="@android:color/white"
		android:textSize="@dimen/material_typography_subtitle1"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingBottom="@dimen/spacing_medium"
		android:paddingTop="@dimen/spacing_large">

		<ImageView
			android:id="@+id/camera_permission_check"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingEnd="@dimen/spacing_small"
			android:src="@drawable/close_circle"
			android:tint="@android:color/holo_red_light"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/camera_permission"
			android:textColor="@android:color/white"
			android:textSize="@dimen/material_typography_subtitle1"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingBottom="@dimen/spacing_medium">

		<ImageView
			android:id="@+id/extern_memory_check"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingEnd="@dimen/spacing_small"
			android:src="@drawable/close_circle"
			android:tint="@android:color/holo_red_light"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/storage_permission"
			android:textColor="@android:color/white"
			android:textSize="@dimen/material_typography_subtitle1"/>
	</LinearLayout>

</LinearLayout>