<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
												 xmlns:app="http://schemas.android.com/apk/res-auto"
												 xmlns:tools="http://schemas.android.com/tools"
												 android:layout_width="match_parent"
												 android:layout_height="match_parent"
												 android:background="@android:color/white">

	<android.support.design.widget.AppBarLayout
		android:id="@+id/app_bar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:backgroundTint="@color/colorPrimary">

		<android.support.v7.widget.Toolbar
			android:id="@+id/about_toolbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:theme="@style/ToolbarTheme"
			app:navigationIcon="@drawable/arrow_left"
			app:title="@string/about_title"
			app:titleTextColor="@android:color/white"/>
	</android.support.design.widget.AppBarLayout>


	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingTop="?attr/actionBarSize">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="@dimen/spacing_normal">

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="end"
				android:src="@drawable/teco"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingBottom="@dimen/spacing_small"
				android:text="@string/copyright"
				android:textStyle="bold"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/impressum_description"/>


		</LinearLayout>
	</ScrollView>


</android.support.design.widget.CoordinatorLayout>