<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical"
			  android:paddingEnd="16dp"
			  android:paddingStart="16dp">

	<android.support.design.widget.TextInputLayout
		android:id="@+id/input_layout_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:minHeight="@dimen/two_line_item__min_height">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/survey_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:autofillHints=""
			android:hint="@string/name_survey"
			android:inputType="text"/>

	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:id="@+id/input_layout_description"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:minHeight="@dimen/two_line_item__min_height">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/survey_description"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:autofillHints=""
			android:hint="@string/survey_description"
			android:inputType="text"/>

	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:id="@+id/input_layout_id"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:minHeight="@dimen/two_line_item__min_height">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/survey_id"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:autofillHints=""
			android:hint="@string/soci_survey_survey_id"
			android:inputType="text"/>

	</android.support.design.widget.TextInputLayout>
</LinearLayout>