<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
									xmlns:tools="http://schemas.android.com/tools"
									android:layout_width="match_parent"
									android:layout_height="wrap_content"
									android:layout_marginLeft="@dimen/mtrl_card_spacing"
									android:layout_marginRight="@dimen/mtrl_card_spacing"
									android:layout_marginTop="@dimen/mtrl_card_spacing"
									android:elevation="@dimen/mtrl_card_elevation"
									android:minHeight="120dp"
									android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:padding="@dimen/mtrl_cards_padding">

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<TextView
					android:id="@+id/study_name"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:ellipsize="end"
					android:fontFamily="sans-serif-medium"
					android:maxLines="1"
					android:textAppearance="@android:style/TextAppearance.Material.Title"
					android:textSize="@dimen/material_typography_h6"
					tools:text="Titel der Studie"/>

				<TextView
					android:id="@+id/amount_of_testperson"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:fontFamily="sans-serif"
					android:textSize="@dimen/material_typography_body2"
					tools:text="X Probanden teilgenommen"/>

			</LinearLayout>

			<View
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"/>


			<ImageButton
				android:id="@+id/expand_arrow"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:layout_weight="0.1"
				android:background="@android:color/white"
				android:contentDescription="@string/card_expand"
				android:src="@drawable/chevron_up"/>
		</LinearLayout>

		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="#1E000000"
			android:paddingBottom="4dp"
			android:paddingTop="4dp"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				style="@style/CardButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:text="@string/start"
				android:textAllCaps="true"/>

			<View
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"/>

			<ImageButton
				android:id="@+id/share"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:layout_weight="0.1"
				android:background="@android:color/white"
				android:contentDescription="@string/share"
				android:src="@drawable/share_variant"/>

			<ImageButton
				android:id="@+id/more"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:layout_weight="0.1"
				android:background="@android:color/white"
				android:contentDescription="@string/more"
				android:src="@drawable/dots_vertical"/>
		</LinearLayout>

	</LinearLayout>


</android.support.v7.widget.CardView>